fix create vm app menu issue and add select mode when deploy wrap

--- a/src/components/AppCenter/style/AppWrapManage.less
+++ b/src/components/AppCenter/style/AppWrapManage.less
@@ -28,6 +28,15 @@
       //   background: white;
       //   border-bottom: 1px solid #e9e9e9;
       // }
+      .wrapListTable {
+        position: relative;
+        .deployModeList {
+          border: 0;
+          .ant-menu-item {
+            border: 0;
+          }
+        }
+      }
     }
   }
 
