--- a/src/components/Header/style/UserPanel.less
+++ b/src/components/Header/style/UserPanel.less
@@ -7,6 +7,7 @@
       & > div + div {
         margin-top: 1px;
         .ant-tag {
+          padding: 0 4px;
           background-color: #ecf0f4;
           display: inline-block;
           transform: scale(0.833);
